placeholder for discussion of enviornmental conditions

--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -110,7 +110,7 @@ Data will be submitted to Dryad upon publication.
     \textbf{Horizontal networks, however, where interactions occur within the same level of organisation (for example interactions between plants belonging to the same food web) have been more neglected by network ecology \parencite{Ellison2019}}. In such systems, interactions between species are not always easy to observe empirically and must instead be deduced through other means. A common approach in ecology is to directly quantify the effects of interacting species on the species of interest by evaluating its performance in the absence and presence of potential interaction partners \parencite{Connell1961, Grace1990}. `Performance' can refer to any variable of interest that affects the dynamics of the system, for example quantity of resources gathered, biomass, or population growth rate. \textbf{Measuring species interactions as effects on performance allows us to infer future population trajectories through the use of population dynamics models, and thus draw direct conclusions about the effects of interactions on patterns of coexistence and diversity \parencite{Laska1998}.} The resulting interactions are phenomenological and thus not dependent on any specific mechanism, allowing us to capture a wide range of biological processes affecting the dynamics of the whole system \parencite{Novak2010}. Such methods can quickly become data intensive and computationally complex, however, as the number of species $S$ increases and the number of potential direct interactions subsequently increases to $S^2$. Highly diverse systems pose a further challenge: the abundance distribution of different species is typically skewed, with a few species making up the majority of abundances and a large number of elements remaining rare \parencite{Fisher1943}. Given that data collection is limited in time and scope, interactions with rarer species especially may not be observed simply by chance. We thus run the risk of excluding them from analyses regardless of the role they might play \parencite{Olesen2011}. Empirically quantifying interaction matrices for diverse horizontal systems thus requires a method that is flexible to both a high number of species, and potential gaps in our records of interactions. 
 
     \paragraph{} % PARAGRAPH TO BETTER MOTIVATE
-    \textbf{Various methods have been developed to circumventing these issues. A common approach is to reduce the number of parameters to be estimated by assuming many interactions are weak enough to be negligeable, and thus do not need to be inferred \parencite{Weiss-Lehman2022}. Other methods attempt to infer interactions for which there is little data from traits \parencite{}, phylogeny \parencite{} or ... \parencite{Ovaskainen2017}. Alternatively, interactions are not identified and models instead rely on estimating association between species, which include the effects of interactions. Here we present another alternative, a joint model which allows us to estimate both pairwise identifiable and pairwise unidentifiable interactions from measures of performance in the absence and presence of different interaction partners.}
+    \textbf{Various methods have been developed to circumventing these issues. A common approach is to reduce the number of parameters to be estimated by assuming many interactions are weak enough to be negligeable, and thus do not need to be inferred \parencite{Weiss-Lehman2022}. Other strategies attempt to infer interactions for which there is little data from traits \parencite{}, phylogeny \parencite{} or ... \parencite{Ovaskainen2017}. Alternatively, interactions are not identified and models instead rely on estimating association between species, which include the effects of interactions. [DELETE?] Here we present another alternative, a joint model which allows us to estimate both pairwise identifiable and pairwise unidentifiable interactions from measures of performance in the absence and presence of different interaction partners.}
 
 
     \paragraph{} 
@@ -257,7 +257,7 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
     \subsection{Case study}
 
        \paragraph{}
-        We applied this framework to an annual wildflower community dataset from Western Australia collected in 2016. This dataset contains over 5000 observations of individual plant seed production from 22 different focal species, and the identity and density of all neighbouring individuals within a 3 to 5 cm radius of the focal individual. \textbf{This dataset included a thinning treatment where half the plots were left at natural density, whilst a quarter were thinned to 60\% density and a quarter thinned to 30\% density, thinning did not target any particular species. This served to mitigate possible confounding effects between plot location and plant density.} We used the framework to quantify interactions between these 22 focal species and 52 neighbour species, and derived scaled interaction strengths with a well-supported population dynamics model for annual plants with a seed bank \parencite{Levine2009, Bimler2018} which required experimentally-measured species demographic rates. Viable seed production was used as a measure of performance and modeled with a negative binomial distribution and a log link. Further details on the data, the model fitting and the procedure for deriving scaled interactions from the population dynamics model are available in the Supplementary Methods \ref{SI:casestudy}.
+        We applied this framework to an annual wildflower community dataset from Western Australia collected in 2016. This dataset contains over 5000 observations of individual plant seed production from 22 different focal species, and the identity and density of all neighbouring individuals within a 3 to 5 cm radius of the focal individual. \textbf{MARGIE ADD SENTENCE ABOUT ENVIRONMENTAL VARIATION HERE. (refer to Supplementary methods for further information)} We used the framework to quantify interactions between these 22 focal species and 52 neighbour species, and derived scaled interaction strengths with a well-supported population dynamics model for annual plants with a seed bank \parencite{Levine2009, Bimler2018} which required experimentally-measured species demographic rates. Viable seed production was used as a measure of performance and modeled with a negative binomial distribution and a log link. Further details on the data, the model fitting and the procedure for deriving scaled interactions from the population dynamics model are available in the Supplementary Methods \ref{SI:casestudy}.
 
 
 \section{Results}
