--- a/4.mss/tex/supps.tex
+++ b/4.mss/tex/supps.tex
@@ -46,6 +46,11 @@
         \paragraph{}
     	In study systems which allow it, a proportion of interaction neighbourhoods can instead be thinned prior to the experiment to randomly remove neighbouring individuals and provide observations for low-density estimates of interactions. Though this steps is not strictly necessary, thinning certain neighbourhoods can also reduce potential confounding effects between the environment and interactions and thus provide more accurate estimates of interaction effects. Environmental data known to affect performance can also be recorded and included in the model (as a random effect for example) to minimise those confounding effects.
 
+        \paragraph{}
+        \textbf{MARGIE PLEASE ADD HERE A SHORT DISCUSSION OF HOW PLOTS MIGHT DIFFER IN THEIR ENVIRONMENTAL CONDITIONS (Reviewer 1)}
+Shade etc.
+Two other main abiotic factors have also been shown to substantially affect community composition and structure in this system: water availability and soil phosphorus (Dwyer et al. 2015). The effects of water availability operate largely over regional gradients, whereas soil P was measured for sampling blocks, at a coarser grain than canopy cover.
+
         \paragraph{} 
         We required species demographic rates (seed survival and germination) in order to scale model interaction estimates into interaction strengths. Species demographic rates for 16 of our focal species were estimated from a database of field experiments carried out between 2016 and 2019 where seedbags were placed in the field to estimate germination rates, and ungerminated seeds were evaluated in the lab for survivability.  The remaining species were assigned mean demographic rates from these experiments. Further details on the methods used for collecting those seed rates are available in section \ref{SI:germination}.
 
