--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -110,7 +110,7 @@ Data will be submitted to Dryad upon publication.
     \textbf{Horizontal networks, however, where interactions occur within the same level of organisation (for example interactions between plants belonging to the same food web) have been more neglected by network ecology \parencite{Ellison2019}}. In such systems, interactions between species are not always easy to observe empirically and must instead be deduced through other means. A common approach in ecology is to directly quantify the effects of interacting species on the species of interest by evaluating its performance in the absence and presence of potential interaction partners \parencite{Connell1961, Grace1990}. `Performance' can refer to any variable of interest that affects the dynamics of the system, for example quantity of resources gathered, biomass, or population growth rate. \textbf{Measuring species interactions as effects on performance allows us to infer future population trajectories through the use of population dynamics models, and thus draw direct conclusions about the effects of interactions on patterns of coexistence and diversity \parencite{Laska1998}.} The resulting interactions are phenomenological and thus not dependent on any specific mechanism, allowing us to capture a wide range of biological processes affecting the dynamics of the whole system \parencite{Novak2010}. Such methods can quickly become data intensive and computationally complex, however, as the number of species $S$ increases and the number of potential direct interactions subsequently increases to $S^2$. Highly diverse systems pose a further challenge: the abundance distribution of different species is typically skewed, with a few species making up the majority of abundances and a large number of elements remaining rare \parencite{Fisher1943}. Given that data collection is limited in time and scope, interactions with rarer species especially may not be observed simply by chance. We thus run the risk of excluding them from analyses regardless of the role they might play \parencite{Olesen2011}. Empirically quantifying interaction matrices for diverse horizontal systems thus requires a method that is flexible to both a high number of species, and potential gaps in our records of interactions. 
 
     \paragraph{} % PARAGRAPH TO BETTER MOTIVATE
-    \textbf{Various methods have been developed to circumventing these issues. A common approach is to reduce the number of parameters to be estimated by assuming many interactions are weak enough to be negligeable, and thus do not need to be inferred \parencite{Weiss-Lehman2022}. Other strategies attempt to infer interactions for which there is little data from traits \parencite{}, phylogeny \parencite{} or ... \parencite{Ovaskainen2017}. Alternatively, interactions are not identified and models instead rely on estimating association between species, which include the effects of interactions. [DELETE?] Here we present another alternative, a joint model which allows us to estimate both pairwise identifiable and pairwise unidentifiable interactions from measures of performance in the absence and presence of different interaction partners.}
+    \textbf{Various methods have been developed to circumventing these issues. A common strategy is to reduce the number of parameters to be estimated by assuming many interactions are weak enough to be negligeable, and thus do not need to be inferred \parencite{Weiss-Lehman2022}. Other approaches average interactions across species, grouping them for example by origin or life form \parencite{Martyn2021}, or by taxonomy and traits \parencite{Uriarte2004}. Alternatively, interactions are not identified and models instead rely on estimating spatial associations between species, which include the effects of interactions. [DELETE PREVIOUS SENTENCE? CO-OCCURRENCE METHODS ARE NOT BROUGHT UP AGAIN.] Here we present another alternative, a joint model which allows us to estimate both pairwise identifiable and pairwise unidentifiable interactions from measures of performance in the absence and presence of different interaction partners.}
 
 
     \paragraph{} 
@@ -300,12 +300,22 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
     \paragraph{}
     \textbf{In particular, our approach includes a method to infer all pairwise interactions despite 'incomplete' data, whereas alternatives typically address this issue by assuming many of these interactions are close to or at zero, and thus negligeable \parencite{}. In our case study, many interaction estimates indeed overlapped with zero, though as discussed in the Methods \ref{meth:sparse} this does not necessarily imply sparsity. DESCRIBE OTHER ALTERNATIVES. Whether our framework provides a better fit to data remains to be tested, and will depend strongly on the particulars of both the data and system at hand. Nonetheless, our method provides a new way to make use of data that has historically been insufficient or too incomplete to infer all pairwise interactions, and thus opens up a new range of questions and findings which can be explored with pre-existing data.}  Though we illustrate our study with one particular ecological dataset, the method presented here could also be adapted for use on a wider array of  horizontal systems such as those found in microbial, neural, and social networks. 
 
+    Bayesian variable selection - e.g. Weiss-Lehman 2022. sparsity- priors to retain some interactions and replace others with an average term to reduce model parameter numbers. Aim of method is to reduce number of parameters to explore species interactions in diverse communities. 
+    Define interactions as a combination of an average interaction and species-specific deviations from this average.
+    reduce number of parameters by identifying only the species-specific deviation from the average. Allow a subset of species-specific parameters to take non-zero values
+    Fit full model with regularised horseshoe priors to n fit final model using non-sparse methods.induce sparsity, the
+
+    Picoche and Barraquand 2020 multivariate autoregressive model to temporally replicated data. 
+
+    Ovaskainen et al 2017 which linear combinations of species abundances best predict future growth rates - groups species based on hteir competitive effects but doesn't accoutn for environmental variation
+    time-series model
+    rather than assume sparse interactions (Mutshinda 2009), assume that interations can be described by a small number of community-level drivers aka linear combinations of species occurrences. Assume there are far fewer drivers than species. Need all unique intra alphas
+    They compare their approach to a sparse and full interaction model, full interaction performs badly due to overfitting
+
+
+
        % Whilst various methods have been proposed to retrieve horizontal interaction networks from highly diverse datasets, these approaches tend to assume sparsity of interactions. In other words, they assume that not all interactions are realised (there exist true zeros), which allows the methods to reduce the number of parameters to be evaluated (fewer interactions = fewer parameters). Ours allows the estimation of interactions which would usually not be estimated by other methods (e.g. Ovatskained et al. Weiss-Lehmann et al, association networks)Ovatskained et al. Weiss-Lehmann et al are two such approaches. We thus open up a new range of questions which can be asked from pre-existing datasets.  DISCUSSION 
    % Ovaskainen - model with independant alphas along the diagonal and then rather than making the re to fill in gaps, all the alphas are the diagonal + what we are inferring as the response and effect matrix. Ovaskainen 2017 does not assume sparsity but requires less information that we do(?) and makes other simplifying assumptions
-
-   % We have not conducted a comparison of between our proposed method and the others we have cited here, in part because the outcome of such an exercise would be highly dependant on the data and system at hand, as well as the questions which are being posed. 
-    % We would verbally compare our method to other techniques (such as Bayesian variable selection) to enumerate the specific areas in which our method presents a new category of analysis, not an alternative or “superior” approach to an existing method. We would then also discuss the different aims, assumptions (e.g. network sparsity in the case of Bayesian variable selection) and data which each method requires, without leading the reader to assume that we believe our framework is 'better' than others when it comes to modelling the response variable of choice.
-
     \paragraph{}
     Nonetheless, the amount of data required for estimating all interactions in diverse communities using our frameworkmay still be substantial. Grouping species which appear very rarely is also a common strategy we employed in our case study to avoid over-parameterisation. If interactions with or between very rare species are the explicit object of a study, however, data-collection should focus on amassing observations of focal individuals from those rarer species to be able to estimate  interaction strengths.  
 
