--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -110,8 +110,8 @@ Data will be submitted to Dryad upon publication.
     \textbf{Horizontal networks, however, where interactions occur within the same level of organisation (for example interactions between plants belonging to the same food web) have been more neglected by network ecology \parencite{Ellison2019}}. In such systems, interactions between species are not always easy to observe empirically and must instead be deduced through other means. A common approach in ecology is to directly quantify the effects of interacting species on the species of interest by evaluating its performance in the absence and presence of potential interaction partners \parencite{Connell1961, Grace1990}. `Performance' can refer to any variable of interest that affects the dynamics of the system, for example quantity of resources gathered, biomass, or population growth rate. \textbf{Measuring species interactions as effects on performance allows us to infer future population trajectories through the use of population dynamics models, and thus draw direct conclusions about the effects of interactions on patterns of coexistence and diversity \parencite{Laska1998}.} The resulting interactions are phenomenological and thus not dependent on any specific mechanism, allowing us to capture a wide range of biological processes affecting the dynamics of the whole system \parencite{Novak2010}. Such methods can quickly become data intensive and computationally complex, however, as the number of species $S$ increases and the number of potential direct interactions subsequently increases to $S^2$. Highly diverse systems pose a further challenge: the abundance distribution of different species is typically skewed, with a few species making up the majority of abundances and a large number of elements remaining rare \parencite{Fisher1943}. Given that data collection is limited in time and scope, interactions with rarer species especially may not be observed simply by chance. We thus run the risk of excluding them from analyses regardless of the role they might play \parencite{Olesen2011}. Empirically quantifying interaction matrices for diverse horizontal systems thus requires a method that is flexible to both a high number of species, and potential gaps in our records of interactions. 
 
     \paragraph{} % PARAGRAPH TO BETTER MOTIVATE
-    \textbf{Various methods have been developed to circumventing these issues. A common strategy is to reduce the number of parameters to be estimated by assuming many interactions are weak enough to be negligeable, and thus do not need to be inferred \parencite{Weiss-Lehman2022}. Other approaches average interactions across species, grouping them for example by origin or life form \parencite{Martyn2021}, or by taxonomy and traits \parencite{Uriarte2004}. Alternatively, interactions are not identified and models instead rely on estimating spatial associations between species, which include the effects of interactions. [DELETE PREVIOUS SENTENCE? CO-OCCURRENCE METHODS ARE NOT BROUGHT UP AGAIN.] Here we present another alternative, a joint model which allows us to estimate both pairwise identifiable and pairwise unidentifiable interactions from measures of performance in the absence and presence of different interaction partners.}
-
+    \textbf{Various methods have been developed to circumventing these issues. A common strategy is to reduce the number of parameters to be estimated by assuming many interactions are weak enough to be negligeable, and thus do not need to be inferred \parencite{Weiss-Lehman2022}. Other approaches average interactions across species, grouping them for example by origin or life form \parencite{Martyn2021}, or by taxonomy and traits \parencite{Uriarte2004}. Here we present another alternative, a joint model which allows us to estimate both pairwise identifiable and pairwise unidentifiable interactions from measures of performance in the absence and presence of different interaction partners.}
+    %  Alternatively, interactions are not identified and models instead rely on estimating spatial associations between species, which include the effects of interactions.S
 
     \paragraph{} 
     We present a general framework to estimate interactions in diverse horizontal systems. We implement the model in STAN \parencite{Carpenter2017}, a Bayesian statistical language, and apply it to an ecological case study of an annual wildflower community in Western Australia. Using this dataset, we estimate positive and negative interactions between 22 focal species and 52 neighbouring species and illustrate the advantages of this approach through a range of ecologically-relevant findings. \textbf{We further describe how to couch the returned interaction estimates into established models of population dynamics, thus allowing inferences to be drawn between the structure and nature of the interaction matrix and patterns of community abundances and biodiversity. This framework presents a new and exciting way to make use of data that may usually be too incomplete to infer all pairwise interactions, alongside pre-written model code in STAN which requires little to no modification for immediate application to a much wider variety of datasets than the case study presented here.}
@@ -251,8 +251,7 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
 
     \textbf{In horizontal systems, interaction networks are expected to be non-sparse because species are typically assumed to interact via the same set of shared resources. Nonetheless, it is likely that the posterior distributions of some interaction estimates returned by the model will overlap with zero. We note that an overlap with zero may be due to several factors and does not necessarily equate to an interaction being insignificant. Firstly, an overlap with zero may arise when an interaction is positive or negative depending on local conditions. Secondly, it may indicate the interaction is poorly informed and hence overlaps with zero because it has a large posterior distribution since we cannot confidently speak to its effect. Lastly, the interaction may be well-informed and weak, in which case the posterior is centered around zero.}
 
-    \textbf{If, contrarily to our assumptions, a user of our framework has good cause to believe that many interactions are weak and the network is instead sparse, there exists multiple approaches to this issue. For example, setting strongly informed priors centered around zero for those interactions that are thought to be negligeable would be relatively easy to implement in the code we provide. We also point the reader towards alternative methods which have been developped explicitly for sparse interaction networks \parencite{Weiss-Lehman2022}.} Moreover, forbidden links are a subset of potential interactions which cannot be observed, often due to physical constraints (e.g.\ biological mismatch) or spatio-temporal uncoupling. For example, a pair of short-lived annual plants might have such opposing phenologies that their growing seasons never overlap in the field. We direct the reader towards the literature on forbidden interactions \parencite{Olesen2011, Jordano2016} for solving these cases. % Moved over from Discussion
-
+    \textbf{If, contrarily to our assumptions, a user of our framework has good cause to believe that many interactions are weak and the network is instead sparse, there exists multiple approaches to this issue. For example, setting strongly informed priors centered around zero for those interactions that are thought to be negligeable would be relatively easy to implement in the code we provide. We also point the reader towards alternative methods which have been developped explicitly for sparse interaction networks \parencite{Weiss-Lehman2022}.} Moreover, forbidden links are a subset of potential interactions which cannot be observed, often due to physical constraints (e.g.\ biological mismatch) or spatio-temporal uncoupling. For example, a pair of short-lived annual plants might have such opposing phenologies that their growing seasons never overlap in the field. We direct the reader towards the literature on forbidden interactions \parencite{Olesen2011, Jordano2016} for solving these cases. [Unbolded text moved from DISCUSSION].
 
     \subsection{Case study}
 
@@ -298,26 +297,13 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
     Our novel framework quantifies the effects of interacting species and reciprocal performance, allowing the estimation of diverse, horizontal interaction matrices. The resulting matrices are non-symmetrical and can contain both positive and negative interactions, as well as the effect of a species on itself. This framework is flexible to metrics of performance, group identity (e.g.\ species, population, etc.) and diversity. We also propose a way to estimate unidentifiable interactions from those which are identifiable, \textbf{which is a significant feature given that networks for horizontal systems are expected to be non-sparse}. The matrices generated through this framework can be transformed into interaction networks through the use of further models describing the system's interaction dynamics. \textbf{Together, these features differentiate our framework from other methods currently available for estimating interactions in diverse horizontal systems and} make it particularly useful in an ecological context (as illustrated in our case study) as well as flexible for use with data from the wide range of complex systems dominated by horizontal interactions.
 
     \paragraph{}
-    \textbf{In particular, our approach includes a method to infer all pairwise interactions despite 'incomplete' data, whereas alternatives typically address this issue by assuming many of these interactions are close to or at zero, and thus negligeable \parencite{}. In our case study, many interaction estimates indeed overlapped with zero, though as discussed in the Methods \ref{meth:sparse} this does not necessarily imply sparsity. DESCRIBE OTHER ALTERNATIVES. Whether our framework provides a better fit to data remains to be tested, and will depend strongly on the particulars of both the data and system at hand. Nonetheless, our method provides a new way to make use of data that has historically been insufficient or too incomplete to infer all pairwise interactions, and thus opens up a new range of questions and findings which can be explored with pre-existing data.}  Though we illustrate our study with one particular ecological dataset, the method presented here could also be adapted for use on a wider array of  horizontal systems such as those found in microbial, neural, and social networks. 
+    \textbf{In particular, our approach includes a method to infer all pairwise interactions despite 'incomplete' data. There are, generally speaking, two alternative strategies to deal with this issue, both attempting to reduce the number of interactions to be estimated. The first assumes that many species have similar effects on one another and can be grouped according to biological factors (e.g. traits, life form) \parencite{Uriarte2004, Martyn2020}. The second assumes that many weak interactions are negligeable and can thus be removed from the model through various variable selection procedures \parencite{Mutshinda2009, Weiss-Lehman2022}, resulting in sparse interaction networks. \textcite{Weiss-Lehman2022} define interactions as a combination of an average community-level measure and species-specific deviations from this average, allowing only a subset of these deviations to take non-zero values. In our case study, many interaction estimates indeed overlapped with zero, though as discussed in the Methods \ref{meth:sparse} this does not necessarily imply sparsity.}
 
-    Bayesian variable selection - e.g. Weiss-Lehman 2022. sparsity- priors to retain some interactions and replace others with an average term to reduce model parameter numbers. Aim of method is to reduce number of parameters to explore species interactions in diverse communities. 
-    Define interactions as a combination of an average interaction and species-specific deviations from this average.
-    reduce number of parameters by identifying only the species-specific deviation from the average. Allow a subset of species-specific parameters to take non-zero values
-    Fit full model with regularised horseshoe priors to n fit final model using non-sparse methods.induce sparsity, the
-
-    Picoche and Barraquand 2020 multivariate autoregressive model to temporally replicated data. 
-
-    Ovaskainen et al 2017 which linear combinations of species abundances best predict future growth rates - groups species based on hteir competitive effects but doesn't accoutn for environmental variation
-    time-series model
-    rather than assume sparse interactions (Mutshinda 2009), assume that interations can be described by a small number of community-level drivers aka linear combinations of species occurrences. Assume there are far fewer drivers than species. Need all unique intra alphas
-    They compare their approach to a sparse and full interaction model, full interaction performs badly due to overfitting
-
-
-
-       % Whilst various methods have been proposed to retrieve horizontal interaction networks from highly diverse datasets, these approaches tend to assume sparsity of interactions. In other words, they assume that not all interactions are realised (there exist true zeros), which allows the methods to reduce the number of parameters to be evaluated (fewer interactions = fewer parameters). Ours allows the estimation of interactions which would usually not be estimated by other methods (e.g. Ovatskained et al. Weiss-Lehmann et al, association networks)Ovatskained et al. Weiss-Lehmann et al are two such approaches. We thus open up a new range of questions which can be asked from pre-existing datasets.  DISCUSSION 
-   % Ovaskainen - model with independant alphas along the diagonal and then rather than making the re to fill in gaps, all the alphas are the diagonal + what we are inferring as the response and effect matrix. Ovaskainen 2017 does not assume sparsity but requires less information that we do(?) and makes other simplifying assumptions
     \paragraph{}
-    Nonetheless, the amount of data required for estimating all interactions in diverse communities using our frameworkmay still be substantial. Grouping species which appear very rarely is also a common strategy we employed in our case study to avoid over-parameterisation. If interactions with or between very rare species are the explicit object of a study, however, data-collection should focus on amassing observations of focal individuals from those rarer species to be able to estimate  interaction strengths.  
+    \textbf{Another approach similar to ours but applied to time-series data is the one developed by \textcite{Ovaskainen2017}, where it is assumed that interactions can be described by a small number of community-level drivers (effectively linear combinations of species abundances) which best predict future growth rates. Though this method requires all intraspecific interactions to be directly inferrable, the number of community-level drivers is much smaller than the number of species, allowing interactions between many species to be quantified despite relatively short time-series data. Their framework is compared to both sparse and full interaction models, the latter performing badly due to overfitting. Indeed, whether our framework provides a better fit to data remains to be tested, and will depend strongly on the particulars of both the data and system at hand. Nonetheless, our method provides a new way to make use of data that has historically been insufficient or too incomplete to infer all pairwise interactions, and thus opens up a new range of questions and findings which can be explored with pre-existing data.} Though we illustrate our study with one particular ecological dataset, the method presented here could also be adapted for use on a wider array of horizontal systems such as those found in microbial, neural, and social networks. 
+
+    %\paragraph{} % DELETE THIS PARAGRAPH
+    %Nonetheless, the amount of data required for estimating all interactions in diverse communities using our framework may still be substantial. Grouping species which appear very rarely is also a common strategy we employed in our case study to avoid over-parameterisation. If interactions with or between very rare species are the explicit object of a study, however, data-collection should focus on amassing observations of focal individuals from those rarer species to be able to estimate  interaction strengths.  
 
     %By estimating the effects of species on each other's performance, and subsequently their population growth and patterns of density, our method stands in contrast to association networks and returns qualitatively different information. There are a wide range of association network frameworks used in ecology \parencite{Burns2010, Losapio2018, Montesinos-Navarro2018} and collectively, they are a common alternative to estimating interaction networks in high-diversity systems as they capture spatial associations between species (e.g.\ \cite{Saiz2018}) and require easier-to-obtain data. Association networks also benefit from easy implementation with a wide range of packages in R (e.g.\ \cite{Griffith2016}) though the resulting networks are typically symmetrical and cannot capture a species' effect on itself. Moreover, association networks remain poor predictors of species interactions and rarely match empirical estimates \parencite{Sander2017,Barner2018, Thurman2019, Blanchet2020
 
@@ -325,7 +311,7 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
     Indeed, species interaction networks have a wide range of practical applications, such as evaluating ecosystem response to human-altered landscapes, guiding future management decisions \parencite{Ross2011} or exploring how communities may respond to global warming \parencite{Gorman2019}. Conservation and ecosystem management efforts aimed at regulating species abundances can, for example, use the information provided by an interaction network to prioritise which species to conserve or eradicate based on their role in the community. Such roles can be deduced by a species' position in the interaction network \parencite{Cirtwill2018a} and as illustrated in our case study \textbf{on a horizontal system}. Identifying keystone, foundation and other important types of species roles is also helpful for understanding biological diversity, ecosystem integrity and functioning, especially in response to disturbances and other stresses \parencite{Nyakatya2008, Orwin2016, Losapio2017, Narwani2019} \textbf{though often requires the inclusion of other trophic levels}. The examples we describe in our case study are not exhaustive, but serve to illustrate how interaction networks, \textbf{especially when linked to population models,} can help us understand both community dynamics overall and the effects \& response of specific species towards the community. 
 
     \paragraph{}
-    Quantifying the community interactions matrix can also allow us to explore how the mechanisms maintaining diversity and stability operate in these systems and across a broad number of species. Self-regulation, for example, is an extremely important driver of community stability \parencite{Barabas2017} and arises from how individuals of the same species interact with one another.     Measures of intra and interspecific interactions can also allow us to estimate niche overlap between species (for an example, see \cite{Chu2015a}); weak interactions between species suggest that they are not sharing or competing for many resources, and thus may have large niche differences in the community. \textbf{Moreover, our inclusion of facilitative interactions, which have traditionally been disregarded in plant population models and mathematical frameworks of plant coexistence, provides a means to investigate the prevalence and strength of facilitation across multiple species and how it may act in relation to competition and species diversity.} Whilst there is still little consensus on how facilitation may affect biodiversity \parencite{Bruno2003, Brooker2008}, recent work suggests it may be more widespread than traditionally thought \parencite{Gross2015, Picoche2020} and can benefit species diversity and stability depending on the circumstances \parencite{Coyte2015, Brooker2008}.
+    Quantifying the community interaction matrix can also allow us to explore how the mechanisms maintaining diversity and stability operate in these systems and across a broad number of species. Self-regulation, for example, is an extremely important driver of community stability \parencite{Barabas2017} and arises from how individuals of the same species interact with one another.     Measures of intra and interspecific interactions can also allow us to estimate niche overlap between species (for an example, see \cite{Chu2015a}); weak interactions between species suggest that they are not sharing or competing for many resources, and thus may have large niche differences in the community. \textbf{Moreover, our inclusion of facilitative interactions, which have traditionally been disregarded in plant population models and mathematical frameworks of plant coexistence, provides a means to investigate the prevalence and strength of facilitation across multiple species and how it may act in relation to competition and species diversity.} Whilst there is still little consensus on how facilitation may affect biodiversity \parencite{Bruno2003, Brooker2008}, recent work suggests it may be more widespread than traditionally thought \parencite{Gross2015, Picoche2020} and can benefit species diversity and stability depending on the circumstances \parencite{Coyte2015, Brooker2008}.
 
     \paragraph{}
     Ultimately, quantifying species interaction networks allows us to apply tools from network theory which will help us understand not only how species interact, but also how these interactions drive community-level patterns of density and diversity. Several metrics already exist for describing horizontal network structure such as weighted connectance \parencite{Ulanowicz1991} or relative intransitivity \parencite{Laird2006a}, though these are fewer than for trophic or unweighted networks networks (e.g.\ \cite{Bersier2002, Delmas2019}). Adapting measures of nestedness or modularity for example to non-sparse networks (as as horizontal communities typically are) would allow us to further characterise how interactions and species are organised. These metrics relate to various aspects of stability and could greatly inform us on how diversity is maintained between species belonging to the same trophic level. Likewise, networks also provide several ways of measuring and describing species roles in their respective communities \parencite{Cirtwill2018a} for example through the use of structural motifs, unique patterns of interacting species which together make up the whole network. Motifs have been found to have important biological meaning in food webs \parencite{Bascompte2005a} but remain to be identified for non-trophic networks. 
