title page edits

--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -68,7 +68,7 @@ Number of words - main text: 5570\\
 Number of references: 85\\
 
 \noindent
-\textbf{Keywords:} Species interactions, competition, facilitation, network, population dynamics, interaction strength, non-trophic, annual plants.  
+\textbf{Keywords:} Annual plants, competition, facilitation, interaction strength, network, non-trophic, population dynamics, species interactions.  
 
 \section*{Author contributions}
 
@@ -76,7 +76,7 @@ M.D.B. designed the methodology, carried out analyses and led the drafting of th
 
 \section*{Data accessibility}
 
-Data will be submitted to Dryad upon publication.
+Data will be submitted to Dryad upon publication. Code is available in the Github repository \url{https://github.com/malbion/JointModelFramework}.
 
 \newpage
 
